--- a/src/main/resources/fxml/weight_main_form.fxml
+++ b/src/main/resources/fxml/weight_main_form.fxml
@@ -3,15 +3,39 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="weightAppUI.mainForm.WeightMainFormController">
-    <Button fx:id="button" layoutX="32.0" layoutY="147.0" mnemonicParsing="false" prefHeight="172.0"
-            prefWidth="536.0" text="ВЗВЕСИТЬ"/>
-    <Label fx:id="weightLabel" alignment="CENTER" layoutX="90.0" layoutY="20.0" prefHeight="121.0" prefWidth="421.0"
-           text="555" textAlignment="CENTER">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="weightAppUI.mainForm.WeightMainFormController">
+    <Button fx:id="button" defaultButton="true" layoutX="32.0" layoutY="147.0" mnemonicParsing="false" prefHeight="172.0" prefWidth="536.0" text="ВЗВЕСИТЬ" textAlignment="RIGHT" />
+    <Label fx:id="weightLabel" alignment="CENTER" layoutX="32.0" layoutY="14.0" prefHeight="121.0" prefWidth="421.0" text=" 555 кг" textAlignment="CENTER">
         <font>
-            <Font size="72.0"/>
+            <Font size="72.0" />
         </font>
     </Label>
+   <Label fx:id="truckNumber" alignment="CENTER" contentDisplay="CENTER" layoutX="194.0" layoutY="332.0" prefHeight="54.0" prefWidth="213.0" text="м555мм69" textAlignment="CENTER" wrapText="true">
+      <font>
+         <Font size="36.0" />
+      </font>
+   </Label>
+   <Circle fx:id="indicator" layoutX="511.0" layoutY="75.0" radius="25.0" strokeType="INSIDE">
+      <fill>
+         <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
+            <stops>
+               <Stop color="#2bb940" />
+               <Stop color="#29ff00" offset="1.0" />
+            </stops>48
+         </RadialGradient>
+      </fill>
+      <stroke>
+         <RadialGradient centerX="0.5" centerY="0.5" focusAngle="-173.37" focusDistance="-0.9069767441860465">
+            <stops>
+               <Stop color="#2bb940" />
+               <Stop color="#1fd313" offset="1.0" />
+            </stops>
+         </RadialGradient>
+      </stroke>
+   </Circle>
 </AnchorPane>
