--- a/src/main/resources/fxml/registration_form.fxml
+++ b/src/main/resources/fxml/registration_form.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -59,5 +60,6 @@
    <TextField fx:id="taxpayerIdNumber" layoutX="208.0" layoutY="77.0" />
    <TextField fx:id="driverName" layoutX="208.0" layoutY="47.0" />
    <TextField fx:id="truckNumber" layoutX="208.0" layoutY="17.0" />
-   <Button layoutX="165.0" layoutY="187.0" mnemonicParsing="false" text="ДАЛЕЕ" />
+   <Button fx:id="next" layoutX="165.0" layoutY="187.0" mnemonicParsing="false" text="ДАЛЕЕ" />
+   <ProgressIndicator layoutX="316.0" layoutY="180.0" prefHeight="39.0" prefWidth="41.0" />
 </AnchorPane>
