--- a/src/main/resources/fxml/registration_form.fxml
+++ b/src/main/resources/fxml/registration_form.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="226.0" prefWidth="382.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="weightAppUI.registrationForm.RegistrationFormController">
+<AnchorPane prefHeight="226.0" prefWidth="382.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="weighAppUI.registrationForm.RegistrationFormController">
    <Label layoutX="14.0" layoutY="14.0" text="Номер машины">
       <font>
          <Font size="14.0" />
@@ -61,5 +61,5 @@
    <TextField fx:id="driverName" layoutX="208.0" layoutY="47.0" />
    <TextField fx:id="truckNumber" layoutX="208.0" layoutY="17.0" />
    <Button fx:id="next" layoutX="165.0" layoutY="187.0" mnemonicParsing="false" text="ДАЛЕЕ" />
-   <ProgressIndicator layoutX="316.0" layoutY="180.0" prefHeight="39.0" prefWidth="41.0" />
+   <ProgressIndicator fx:id="progress" layoutX="316.0" layoutY="180.0" prefHeight="39.0" prefWidth="41.0" />
 </AnchorPane>
