--- a/src/main/resources/fxml/registration.fxml
+++ b/src/main/resources/fxml/registration.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="226.0" prefWidth="382.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="weighAppUI.form.view.RegistrationView">
+<AnchorPane prefHeight="226.0" prefWidth="382.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.weighAppUI.form.view.RegistrationView">
    <Label layoutX="14.0" layoutY="14.0" text="Номер машины">
       <font>
          <Font size="14.0" />
