--- a/src/main/resources/fxml/registration.fxml
+++ b/src/main/resources/fxml/registration.fxml
@@ -8,58 +8,59 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="226.0" prefWidth="382.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.weighAppUI.form.view.RegistrationView">
-   <Label layoutX="14.0" layoutY="14.0" text="Номер машины">
-      <font>
-         <Font size="14.0" />
-      </font>
-      <opaqueInsets>
-         <Insets />
-      </opaqueInsets>
-      <padding>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </padding>
-   </Label>
-   <Label layoutX="14.0" layoutY="44.0" text="ФИО водителя">
-      <font>
-         <Font size="14.0" />
-      </font>
-      <opaqueInsets>
-         <Insets />
-      </opaqueInsets>
-      <padding>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </padding>
-   </Label>
-   <Label layoutX="14.0" layoutY="104.0" text="Наименование организации">
-      <padding>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </padding>
-      <font>
-         <Font size="14.0" />
-      </font>
-   </Label>
-   <Label layoutX="14.0" layoutY="74.0" text="ИНН">
-      <padding>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </padding>
-      <font>
-         <Font size="14.0" />
-      </font>
-   </Label>
-   <Label layoutX="14.0" layoutY="134.0" text="Адрес">
-      <padding>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-      </padding>
-      <font>
-         <Font size="14.0" />
-      </font>
-   </Label>
-   <TextField fx:id="organizationName" layoutX="208.0" layoutY="107.0" />
-   <TextField fx:id="adress" layoutX="208.0" layoutY="137.0" />
-   <TextField fx:id="taxpayerIdNumber" layoutX="208.0" layoutY="77.0" />
-   <TextField fx:id="driverName" layoutX="208.0" layoutY="47.0" />
-   <TextField fx:id="truckNumber" layoutX="208.0" layoutY="17.0" />
-   <Button fx:id="next" layoutX="165.0" layoutY="187.0" mnemonicParsing="false" text="ДАЛЕЕ" />
-   <ProgressIndicator fx:id="progress" layoutX="316.0" layoutY="180.0" prefHeight="39.0" prefWidth="41.0" />
+<AnchorPane prefHeight="226.0" prefWidth="382.0" xmlns="http://javafx.com/javafx/9.0.1"
+            xmlns:fx="http://javafx.com/fxml/1">
+    <Label layoutX="14.0" layoutY="14.0" text="Номер машины">
+        <font>
+            <Font size="14.0"/>
+        </font>
+        <opaqueInsets>
+            <Insets/>
+        </opaqueInsets>
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+    </Label>
+    <Label layoutX="14.0" layoutY="44.0" text="ФИО водителя">
+        <font>
+            <Font size="14.0"/>
+        </font>
+        <opaqueInsets>
+            <Insets/>
+        </opaqueInsets>
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+    </Label>
+    <Label layoutX="14.0" layoutY="104.0" text="Наименование организации">
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+        <font>
+            <Font size="14.0"/>
+        </font>
+    </Label>
+    <Label layoutX="14.0" layoutY="74.0" text="ИНН">
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+        <font>
+            <Font size="14.0"/>
+        </font>
+    </Label>
+    <Label layoutX="14.0" layoutY="134.0" text="Адрес">
+        <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </padding>
+        <font>
+            <Font size="14.0"/>
+        </font>
+    </Label>
+    <TextField fx:id="organizationName" layoutX="208.0" layoutY="107.0"/>
+    <TextField fx:id="adress" layoutX="208.0" layoutY="137.0"/>
+    <TextField fx:id="taxpayerIdNumber" layoutX="208.0" layoutY="77.0"/>
+    <TextField fx:id="driverName" layoutX="208.0" layoutY="47.0"/>
+    <TextField fx:id="truckNumber" layoutX="208.0" layoutY="17.0"/>
+    <Button fx:id="next" layoutX="165.0" layoutY="187.0" mnemonicParsing="false" text="ДАЛЕЕ"/>
+    <ProgressIndicator fx:id="progress" layoutX="316.0" layoutY="180.0" prefHeight="39.0" prefWidth="41.0"/>
 </AnchorPane>
