--- a/src/main/resources/fxml/launch.fxml
+++ b/src/main/resources/fxml/launch.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="206.0" prefWidth="593.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.weighAppUI.form.view.LaunchView">
+<AnchorPane prefHeight="206.0" prefWidth="593.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <Button fx:id="application" layoutX="11.0" layoutY="12.0" mnemonicParsing="false" prefHeight="183.0" prefWidth="286.0" text="ЗАЯВКА">
          <font>
